# Youtube-OCR

./: .gitignore  README.md  extract_subs.py  pyproject.toml
